增加自定义lint

--- a/AndroidBase/build.gradle
+++ b/AndroidBase/build.gradle
@@ -22,6 +22,9 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    lintOptions {
+        abortOnError true
+    }
 }
 
 dependencies {
