--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,8 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".demo.anima.AnimaActivity"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".demo.anima.FadeAnimaFixHeightActivity"
+            android:theme="@style/AppTheme"/>
         <service
             android:name=".service.HongbaoService"
             android:enabled="true"
