--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,12 +52,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.fynn.fluidlayout:fluidlayout:1.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:23.+'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'io.reactivex:rxjava:1.0.14'
     compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.mingle.zzz40500:pulltonextlayout:1.3.0'
     compile project(':AndroidBase')
     compile project(':lintrule_aar')
 }
