--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,11 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".demo.anima.FadeAnimaFixHeightActivity"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".demo.pullnext.PullNextAc"
+                  android:theme="@style/AppTheme"/>
+
+        <activity android:name=".demo.test.TestTextViewAc"
+                  android:theme="@style/AppTheme"/>
         <service
             android:name=".service.HongbaoService"
             android:enabled="true"
