--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.14'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.mingle.zzz40500:pulltonextlayout:1.3.0'
+    compile 'liji.library.dev:citypickerview:0.7.0'
+    compile 'com.lcodecorex:tkrefreshlayout:1.0.7'
+    compile 'com.zhy:base-rvadapter:3.0.3'
     compile project(':AndroidBase')
     compile project(':lintrule_aar')
 }
